//
// Aspia Project
// Copyright (C) 2018 Dmitry Chapyshev <dmitry@aspia.ru>
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program. If not, see <https://www.gnu.org/licenses/>.
//

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package aspia.proto;

message SrpUser
{
    enum Flags
    {
        NO_FLAGS = 0;
        ENABLED = 1;
    }

    string username    = 1;
    bytes salt         = 2;
    bytes verifier     = 3;
    bytes number       = 4;
    bytes generator    = 5;
    uint32 sessions    = 6;
    uint32 flags       = 7;
}

message SrpUserList
{
    bytes seed_key     = 1;
    repeated SrpUser user = 2;
}
